# synthetic-lab

./: .gitignore  pyproject.toml  requirements.txt
docs/: .Rhistory  ARCHITECTURE.md  DATA_CATALOG_RVX.html  DATA_CATALOG_RVX.md  DATA_CATALOG_RVX_old.html  DATA_CATALOG_RVX_old.md  TASKS_POPULATION.md  VISION.md  synthetic_population_IPF.md  synthetic_population_context.md
examples/: config_usage_example.py
notebooks/: 01_metrics_basic.ipynb  02_metrics_statistical.ipynb  03_explore_geostad.ipynb  04_geostad_pipeline_test.ipynb  05_data_catalog_rvx.ipynb  99_temp.ipynb  temp.ipynb
src/synlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/synlab/core/: __init__.py  base.py
src/synlab/data/: __init__.py  configs.py  population_dpmm_wine.py  population_geostad.py
src/synlab/evaluation/: __init__.py  metrics_basic.py  metrics_ml.py  metrics_spatial.py  metrics_statistical.py  metrics_summary.py
src/synlab/methods/: __init__.py  dpmm_mst.py
src/synlab/runners/: run_dpmm_wine_mst.py  run_geostad_dpmm_mst.py
src/synlab/utils/: __init__.py  paths.py  postprocessing.py
