[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synlab"
version = "0.1.0"
description = "Synthetic Lab - experiments with synthetic data production methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dpmm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
