[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synlab"
version = "0.1.0"
description = "Synthetic Lab - experiments with synthetic data production methods"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "dpmm",
    "dbfread",
    "matplotlib",
    "seaborn",
    "pyreadstat",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]  # Line too long

[tool.ruff.lint.isort]
known-first-party = ["synlab"]
